# fireworks2api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  fireworks2api_lessons_learned.md  fireworks2api_prompt.md  opencode.json  pyproject.toml
app/: __init__.py  main.py
docs/: README.md  developer-runbook.md  fireworks-field-crosswalk.md  fireworks-inference-matrix.md  fireworks-native-capabilities.md  inference-routing.md  model-management.md  operator-runbook.md  public-api-roadmap.md  public-api.md  public-to-fireworks-adapter-matrix.md  release-checkpoint.md  route-transform-trace.md  sub2api-public-behavior.md
scripts/: check_responses_usage.py  fireworks_inference_smoke.py  live_capability_smoke.py  live_responses_stream_check.py  predownload_tokenizers.py  sdk_live_smoke.py  test_kimi_direct_responses.py
tests/: test_account_cooldowns_repository.py  test_account_sticky_router.py  test_admin_api.py  test_admin_costs_security.py  test_admin_model_catalog_api.py  test_admin_model_import.py  test_admin_static.py  test_admin_transform_debug.py  test_anthropic_messages_api.py  test_anthropic_responses_bridge.py  test_anthropic_route_transform_trace.py  test_cache_analysis.py  test_failover.py  test_fireworks_architecture.py  test_fireworks_error_contracts.py  test_fireworks_headers.py  test_fireworks_inference_smoke_helpers.py  test_fireworks_model_registry.py  test_fireworks_native_paths.py  test_fireworks_proxy_route_trace.py  test_live_capability_smoke.py  (+28 more)
(+106 files in other folders)
